<resources>
    <string name="app_name">QuoteCrate</string>
    <string name="quotecrate_text">QuoteCrate</string>
    <string name="signin_text">Sign in</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="signup_text">Sign Up</string>
    <string name="not_yet_registered_text">Don\'t have an account?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or_text">or</string>
    <string name="username_text">Username</string>
    <string name="submit_text">Submit</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="username_should_not_be_empty">Username should not be empty</string>
    <string name="email_should_not_be_empty">Email should not be empty</string>
    <string name="password_validation_message">Password must contain at least one uppercase letter, at least one lowercase letter, at least one digit, at least one special character and minimum 8 characters</string>
    <string name="password_login_validation_msg">Password should not be empty</string>
    <string name="favourites_text">Favourites</string>
    <string name="logout_text">Logout</string>
    <string name="user_info">"Hi, %s</string>
    <string name="user_registered_successfully_text">User registered successfully.</string>
    <string name="sign_in_was_canceled_text">Sign-in was canceled.</string>
    <string name="an_error_occurred_during_sign_in">An error occurred during sign-in.</string>
    <string name="something_went_wrong_text">Something went wrong</string>
    <string name="userinfo_text">UserInfo</string>
    <string name="email">EMAIL</string>
    <string name="user_authenticated_successfully">User authenticated successfully.</string>
    <string name="signin_not_enabled_message">Please enter a valid email and password to sign in.</string>
    <string name="signup_fields_not_valid_message">Please fill in all required fields correctly before proceeding.</string>
    <string name="user_signed_out_successfully">User signed out successfully!</string>
    <string name="email_verification_message">" Verification email sent to %1$s! Please check your inbox to verify and login here!"</string>
    <string name="dummy_quote">Its not what you look at that matters, it\'s what you see.</string>
    <string name="dummy_author">- Henry David Thoreau</string>
    <string name="get_random_quote_text">Get Random Quote</string>
    <string name="share_quote_text">Share</string>
    <string name="please_select_the_app_text">"Please select the app: "</string>
    <string name="hi_user">Hi, User</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
</resources>