<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quotecrate_background"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/quotecrate_text"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:fontFamily="@font/acme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signupTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/acme"
            android:text="@string/signup_text"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appNameTV" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupTV">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/field_background"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/acme"
                android:hint="@string/email_text"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/emailValidationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/email_should_not_be_empty"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/emailET" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailValidationTV">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/field_background"
                        android:drawableStart="@drawable/password_lock_icon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/acme"
                        android:hint="@string/password_text"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/eyeIconIV"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:clickable="true"
                        android:contentDescription="@string/toggle_password_visibility"
                        android:focusable="true"
                        android:src="@drawable/visibility_off_icon" />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/passwordValidationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/password_validation_message"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/light_blue"
                android:fontFamily="@font/acme"
                android:padding="2dp"
                android:text="@string/signup_text"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/passwordValidationTV" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submitButton">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/LoginRedirectTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/acme"
                    android:paddingEnd="10dp"
                    android:text="@string/already_have_an_account_text"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/LoginTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/acme"
                    android:text="@string/sign_in_text"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/LoginRedirectTV"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>