<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quotecrate_background"
    tools:context=".ui.quoteDisplay.QuoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/warm_blue"
            app:menu="@menu/top_app_bar_menu"
            app:title="@string/hi_user"
            app:titleTextAppearance="@style/ToolbarTitleStyle"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quoteSectionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quoteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/dummy_quote"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/quoteSectionLayout"
            app:layout_constraintStart_toStartOf="@id/quoteSectionLayout"
            app:layout_constraintTop_toTopOf="@id/quoteSectionLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quoteAuthorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/dummy_author"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/quoteSectionLayout"
            app:layout_constraintStart_toStartOf="@id/quoteSectionLayout"
            app:layout_constraintTop_toBottomOf="@id/quoteTV" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newQuoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#33B5E5"
            android:fontFamily="@font/acme"
            android:padding="10dp"
            android:text="@string/get_random_quote_text"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary_variant"
            android:textColorHint="#694949"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/quoteSectionLayout"
            app:layout_constraintStart_toStartOf="@id/quoteSectionLayout"
            app:layout_constraintTop_toBottomOf="@id/quoteAuthorTV" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shareQuoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#33B5E5"
            android:drawableStart="@drawable/share_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/acme"
            android:padding="10dp"
            android:text="@string/share_quote_text"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary_variant"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/quoteSectionLayout"
            app:layout_constraintStart_toStartOf="@id/quoteSectionLayout"
            app:layout_constraintTop_toBottomOf="@id/newQuoteButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>